add nav to header

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
   <head>
     <title>Git training</title>
-  </head>
+	<nav></nav>  
+</head>
   <body>
     <header></header>
     <main></main>
