add main content

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
   <body>
     <header></header>
-    <main></main>
+    <main>This is a git workshop with mawadonline team</main>
     <footer></footer>
   </body>
 </html>
