--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <html>
   <head>
     <title>Git training</title>
-	<nav></nav>  
-</head>
+  </head>
   <body>
-    <header></header>
+    <header>
+      <nav>
+        <ul>
+          <li>Home</li>
+          <li>Product</li>
+        </ul>
+      </nav>
+    </header>
     <main>This is a git workshop with mawadonline team</main>
     <footer></footer>
   </body>
